# lume-model-deployment-template

./: .dockerignore  .gitignore  Dockerfile.jinja  LICENSE  README.md  README.md.jinja  README_project.md  copier.yaml  copier.yml  deployment.yaml.jinja  github-secret.yaml  pixi.toml.jinja  pyproject.toml
.github/workflows/: deploy.yaml.jinja
config/: config_entrypoint.sh
src/: config.py.jinja  mlflow_utils.py  run.py
src/interface/: k2eg_interface.py
src/online_model/: client.py  mlflow_utils.py  run.py
src/online_model/configs/: template_config.py.jinja
src/online_model/interface/: epics_interface.py  k2eg_interface.py
src/online_model/transformers/: transformer.py
